feat: top repaired products performance report
